--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ Support: samiulajom2004@gmail.com
   --bff: "Syne", sans-serif;
   --bc: #767676;
   --black: #000;
-  --secondaryColor: rgba(13, 170, 131, 0.884);
+  --secondaryColor: #32cd32;
   --bodycolor: #000;
   --white: #ffff;
   --navcolor: #17181b;
@@ -175,7 +175,8 @@ body {
 }
 /* Button styles end --------------------------------------- */
 /* Animation styles start ---------------------------------- */
-@keyframes lightingAnimation {
+
+/* @keyframes lightingAnimation {
   0% {
     box-shadow: rgba(13, 170, 131, 0.2) 0px 7px 29px 0px;
   }
@@ -191,6 +192,25 @@ body {
   }
   100% {
     box-shadow: rgba(13, 170, 131, 0.8) 0px 7px 29px 0px;
+  }
+} */
+
+/* Animation using variable */
+@keyframes lightingAnimation {
+  0% {
+    box-shadow: rgba(var(--secondaryColor-rgb), 0.2) 0px 7px 29px 0px;
+  }
+  25% {
+    box-shadow: rgba(var(--secondaryColor-rgb), 0.4) 0px 7px 29px 0px;
+  }
+  50% {
+    box-shadow: rgba(var(--secondaryColor-rgb), 0.5) 0px 7px 29px 0px;
+  }
+  75% {
+    box-shadow: rgba(var(--secondaryColor-rgb), 0.7) 0px 7px 29px 0px;
+  }
+  100% {
+    box-shadow: rgba(var(--secondaryColor-rgb), 0.8) 0px 7px 29px 0px;
   }
 }
 /* Animation styles end ------------------------------------ */
@@ -235,20 +255,24 @@ nav.desktop .nav-logo div {
   align-items: center;
   justify-content: center;
   background: transparent;
-  border: 5px solid var(--bordercolor);
+  /* border: 5px solid var(--bordercolor); */
+  border: 5px solid var(--secondaryColor);
   border-radius: 50%;
   margin: 0 auto;
 }
 nav.desktop .nav-logo img {
   width: 100%;
 }
-nav.desktop .nav-logo h2 {
+nav.desktop .nav-logo h2,nav.desktop .nav-logo p {
   font-size: 18px;
   line-height: 28px;
   color: var(--white);
   text-align: center;
   text-transform: capitalize;
   margin: 1rem auto;
+}
+nav.desktop .nav-logo p{
+  color: var(--bc);
 }
 nav.desktop ul li {
   font-size: 12px;
