--- a/css/style.css
+++ b/css/style.css
@@ -1054,7 +1054,6 @@ aside section {
 }
 .contact-info ul li {
   display: flex;
-  align-items: center;
   gap: 1rem;
   padding: 1rem 0;
 }
@@ -1155,6 +1154,10 @@ aside section {
   width: 100%;
   border: none;
   border-radius: 10px;
+}
+
+.contact-mid-part ul li a {
+  color: var(--bc);
 }
 
 /*11. Contact end -----------------------------------------------------*/
