--- a/css/style.css
+++ b/css/style.css
@@ -414,7 +414,7 @@ aside section {
 .banner .image-container {
   transform: rotateY(-10deg);
   max-width: 70%;
-  background: url(./../image/banner/samiul-2.webp) no-repeat center;
+  background: url(./../image/banner/samiul2.png) no-repeat center;
   background-size: cover;
   position: relative;
   z-index: 10;
